--- a/index.html
+++ b/index.html
@@ -3,28 +3,20 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>产品使用说明书</title>
+  <title>产品说明书</title>
   <style>
     body, html {
-      margin: 0;
-      padding: 0;
-      height: 100%;
-      overflow: hidden;
-      background: #f5f5f5;
+      margin: 0; padding: 0;
+      height: 100%; overflow: hidden;
     }
     iframe {
       width: 100%;
       height: 100%;
       border: none;
-      background: white;
     }
   </style>
 </head>
 <body>
-  <!-- 替换 src 为你自己的 PDF Raw 链接 -->
-  <iframe 
-    src="https://github.com/CSJ-5413/Chipsea/raw/main/R3G355-RG56-01.pdf"
-    loading="eager"
-  ></iframe>
+  <iframe src="./R30355-R056-01.pdf"></iframe>
 </body>
 </html>
